--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,11 +77,11 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/VR_Menu
-MRUItem2=/Game/_Scenes/Maze
-MRUItem3=/Game/_Scenes/KnifeThrow
-MRUItem4=/Game/_Scenes/HeartBall
+MRUItem0=/Game/_Scenes/HeartBall
+MRUItem1=/Game/_Scenes/IntroScene
+MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem3=/Game/_Scenes/Maze
+MRUItem4=/Game/_Scenes/KnifeThrow
 MRUItem5=/Game/_Scenes/Bowling
 MRUItem6=/Game/_Scenes/ClownBall
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
@@ -118,7 +118,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/HeartBall
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1786,16 +1786,16 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+MeshComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+PrimitiveComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+SceneComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+ActorComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
