--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,11 +75,12 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 GridEnabled=False
 CurrentPosGridSize=1
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/IntroScene
-MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/Maze
 MRUItem4=/Game/_Scenes/KnifeThrow
 MRUItem5=/Game/_Scenes/Bowling
@@ -118,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1786,7 +1787,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -1815,6 +1816,9 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
 RecentlyPlaced=/Game/FBX_Models/Menu/ClockTrunk/ClockTreeTrunkTextured.ClockTreeTrunkTextured;
 RecentlyPlaced=/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat;
@@ -1823,7 +1827,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/BentTree/Bent_Tree.Bent_Tree;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/Menu/ClockTreeTrunk.ClockTreeTrunk;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Candle/Candle_HolderV3_Smooth.Candle_HolderV3_Smooth;
@@ -1831,10 +1834,8 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/BasicTunnel_Entrance.BasicTunnel_Ent
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Kitchen_Knife/KitchenKnifeV9_Smooth.KitchenKnifeV9_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Severed_Head_Mount/Severed_Head_MountV1_Smooth.Severed_Head_MountV1_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Trunk/trunk_V1.trunk_V1;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V1.COG_V1;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
-RecentlyPlaced=/Game/ParticleEffects/IntroScene/P_Env_Fire_Grate_01.P_Env_Fire_Grate_01;
 
 [MessageLog]
 LastLogListing=LightingResults
