--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/Chest
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/KnifeThrow/RustyNail
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1859,7 +1859,7 @@ RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTru
 RecentlyPlaced=/Game/FBX_Models/Menu/ClockTrunk/ClockTreeTrunkTextured.ClockTreeTrunkTextured;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=7.000 Y=5.000
@@ -1884,7 +1884,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/ChestV1_Textured.fbx
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/KnifeThrow/RustyNail_V1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
