--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,8 +79,8 @@ RotGridEnabled=False
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/VR_Menu
 MRUItem2=/Game/_Scenes/HeartBall
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/Maze
@@ -120,7 +120,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1837,6 +1837,7 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/RustyNail/RustyNail_V1.RustyNail_V1;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Textured_Cube;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
@@ -1856,10 +1857,9 @@ RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFact
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
-RecentlyPlaced=/Game/FBX_Models/Menu/ClockTrunk/ClockTreeTrunkTextured.ClockTreeTrunkTextured;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [RootWindow]
 ScreenPosition=X=7.000 Y=5.000
