--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ CurrentPosGridSize=0
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/IntroScene
 MRUItem2=/Game/_Scenes/KnifeThrow
 MRUItem3=/Game/_Scenes/HeartBall
 MRUItem4=/Game/_Scenes/Maze
@@ -91,7 +91,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/IntroScene/Moon
+ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1834,6 +1834,9 @@ MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Game/FBX_Models/Maze/Vase/VaseV1_Smooth.VaseV1_Smooth;
+RecentlyPlaced=/Game/FBX_Models/Maze/Vase/VaseV4.VaseV4;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/RustyNail/RustyNail_V1.RustyNail_V1;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Textured_Cube;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
@@ -1851,12 +1854,9 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMat
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/NewFolder/FemaleTarget_FullBodyV1_default.FemaleTarget_FullBodyV1_default;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/NewFolder/FemaleTarget_FullBodyV1_Body.FemaleTarget_FullBodyV1_Body;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=7.000 Y=5.000
@@ -1881,7 +1881,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/Mars.png
+GenericImport=C:/Users/Matt/Desktop/VaseV4.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2508,6 +2508,8 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportMaterials=False
+bImportTextures=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
