--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -1809,7 +1809,7 @@ Volume=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.LightmassSettings\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -1837,9 +1837,11 @@ ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribu
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume=
 PaperSpriteActor=
+LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/BasicTunnelTextured.BasicTunnelTextured;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelStraightSegment_SmoothV2Textured.TunnelStraightSegment_SmoothV2Textured;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelStraightSegment_Smooth.TunnelStraightSegment_Smooth;
@@ -1858,13 +1860,12 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Vase/VaseV4.VaseV4;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/RustyNail/RustyNail_V1.RustyNail_V1;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Textured_Cube;
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
 
 [MessageLog]
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=7.000 Y=5.000
+ScreenPosition=X=15.000 Y=3.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
