--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,8 +75,8 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=4
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Menu/WisdomTooth
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -116,10 +116,12 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.VR_Menu
+OpenAssetsAtExit=/Game/Blueprints/Menu/BP_ToothV1.BP_ToothV1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1809,7 +1811,7 @@ Volume=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.LightmassSettings\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -1862,10 +1864,10 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Texture
 RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=15.000 Y=3.000
+ScreenPosition=X=8.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1887,7 +1889,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/BasicTunnelTextured.fbx
+GenericImport=C:/Users/Matt/Desktop/WisdomToothV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2685,6 +2687,7 @@ bConvertSceneUnit=False
 /Game/Blueprints/Menu/BP_ToothV1.BP_ToothV1=0
 /Game/Sprites_Decals/Menu/Cloud/RainCloud1.RainCloud1=1
 /Game/Sprites_Decals/Menu/Cloud/transparent-backgrounds-cloud-3.transparent-backgrounds-cloud-3=0
+/Game/FBX_Models/Menu/WisdomTooth/WisdomToothV1.WisdomToothV1=0
 
 [MaterialEditor]
 PrimType=1
