--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Menu/WisdomTooth
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Maze/Crate_Box
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -120,8 +120,6 @@ LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.VR_Menu
-OpenAssetsAtExit=/Game/Blueprints/Menu/BP_ToothV1.BP_ToothV1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1842,6 +1840,8 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Maze/Crate_Box/Flat_CrateBox_Mat.Flat_CrateBox_Mat;
+RecentlyPlaced=/Game/FBX_Models/Maze/Crate_Box/Box_CrateV1_Textured.Box_CrateV1_Textured;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/BasicTunnelTextured.BasicTunnelTextured;
@@ -1860,14 +1860,12 @@ RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPo
 RecentlyPlaced=/Game/FBX_Models/Maze/Vase/VaseV1_Smooth.VaseV1_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Vase/VaseV4.VaseV4;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/RustyNail/RustyNail_V1.RustyNail_V1;
-RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Textured_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=8.000 Y=0.000
+ScreenPosition=X=0.000 Y=4.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1889,7 +1887,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/WisdomToothV1.fbx
+GenericImport=C:/Users/Matt/Desktop/Box_CrateV1/AmbientOcclusionMap.png
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2688,6 +2686,7 @@ bConvertSceneUnit=False
 /Game/Sprites_Decals/Menu/Cloud/RainCloud1.RainCloud1=1
 /Game/Sprites_Decals/Menu/Cloud/transparent-backgrounds-cloud-3.transparent-backgrounds-cloud-3=0
 /Game/FBX_Models/Menu/WisdomTooth/WisdomToothV1.WisdomToothV1=0
+/Game/Materials/Maze/Crate_Box/Flat_CrateBox_Mat.Flat_CrateBox_Mat=0
 
 [MaterialEditor]
 PrimType=1
