--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1840,6 +1840,16 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_001.AxeTexV1_Cylinder_001;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_000.AxeTexV1_Cylinder_000;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_004.AxeTexV1_Cube_004;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_003.AxeTexV1_Cube_003;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_001.AxeTexV1_Cube_001;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Torus.Bone-sawTex_Torus;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_025.Bone-sawTex_Cylinder_025;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_024.Bone-sawTex_Cylinder_024;
@@ -1850,16 +1860,6 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_016.Bon
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_014.Bone-sawTex_Cylinder_014;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_009.Bone-sawTex_Cylinder_009;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_008.Bone-sawTex_Cylinder_008;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_007.Bone-sawTex_Cylinder_007;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_006.Bone-sawTex_Cylinder_006;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_004.Bone-sawTex_Cylinder_004;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_002.Bone-sawTex_Cylinder_002;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_001.Bone-sawTex_Cylinder_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_000.Bone-sawTex_Cylinder_000;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cube_003.Bone-sawTex_Cube_003;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cube_002.Bone-sawTex_Cube_002;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cube_001.Bone-sawTex_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cube.Bone-sawTex_Cube;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1887,7 +1887,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/Bone-Saw/Bone-sawTex.fbx
+GenericImport=C:/Users/Matt/Desktop/Axe/AxeBlade AmbOcc.png
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
