--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,12 +76,12 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/KnifeThrow
 MRUItem2=/Game/_Scenes/IntroScene
-MRUItem3=/Game/_Scenes/KnifeThrow
-MRUItem4=/Game/_Scenes/HeartBall
-MRUItem5=/Game/_Scenes/Bowling
-MRUItem6=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/Bowling
+MRUItem5=/Game/_Scenes/ClownBall
+MRUItem6=/Game/_Scenes/Maze
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Audio/Menu
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1840,6 +1840,17 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
+RecentlyPlaced=/Game/Materials/HeartBall/BodyForGirl/Flat_Hair_Mat.Flat_Hair_Mat;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Specular.FemaleTarget_FullBodyV1_Packed0_Specular;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Mat.Tessellation_FunkyWall1_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
+RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_Mesh.Axe_Mesh;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
@@ -1849,17 +1860,6 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_001.AxeTexV1_Cy
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_000.AxeTexV1_Cylinder_000;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_004.AxeTexV1_Cube_004;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_003.AxeTexV1_Cube_003;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cube_001.AxeTexV1_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Torus.Bone-sawTex_Torus;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_025.Bone-sawTex_Cylinder_025;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_024.Bone-sawTex_Cylinder_024;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_023.Bone-sawTex_Cylinder_023;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_022.Bone-sawTex_Cylinder_022;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_018.Bone-sawTex_Cylinder_018;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_016.Bone-sawTex_Cylinder_016;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_014.Bone-sawTex_Cylinder_014;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_009.Bone-sawTex_Cylinder_009;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tools/Bone-Saw/Bone-sawTex_Cylinder_008.Bone-sawTex_Cylinder_008;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1887,7 +1887,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/Axe/AxeBlade AmbOcc.png
+GenericImport=C:/Users/Matt/Desktop/ToothHitGround.wav
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2685,6 +2685,12 @@ bConvertSceneUnit=False
 /Game/Sprites_Decals/Menu/Cloud/transparent-backgrounds-cloud-3.transparent-backgrounds-cloud-3=0
 /Game/FBX_Models/Menu/WisdomTooth/WisdomToothV1.WisdomToothV1=0
 /Game/Materials/Maze/Crate_Box/Flat_CrateBox_Mat.Flat_CrateBox_Mat=0
+/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat=0
+/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat=0
+/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Mat.Tessellation_FunkyWall1_Mat=0
+/Game/Materials/HeartBall/BodyForGirl/Flat_Hair_Mat.Flat_Hair_Mat=0
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.Rain_Inside_House-Mark_DiAngelo-323934112_2.Rain_Inside_House-Mark_DiAngelo-323934112_SoundCue=0
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.More_Thunder-Mike_Koenig-889679068_5.More_Thunder-Mike_Koenig-889679068_SoundCue=0
 
 [MaterialEditor]
 PrimType=1
