--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Maze/Cart
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1843,6 +1843,9 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
+RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V1.COG_V1;
@@ -1854,15 +1857,12 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMat
 RecentlyPlaced=/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Mat.Tessellation_FunkyWall1_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
-RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
-RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_Mesh.Axe_Mesh;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_001.AxeTexV1_Cylinder_001;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -2694,6 +2694,7 @@ bConvertSceneUnit=False
 /Game/Materials/HeartBall/BodyForGirl/Flat_Hair_Mat.Flat_Hair_Mat=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.Rain_Inside_House-Mark_DiAngelo-323934112_2.Rain_Inside_House-Mark_DiAngelo-323934112_SoundCue=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.More_Thunder-Mike_Koenig-889679068_5.More_Thunder-Mike_Koenig-889679068_SoundCue=0
+/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartBody_Mat.Flat_WoodGrainFloor_CartBody_Mat=0
 
 [MaterialEditor]
 PrimType=1
