--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -93,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/Maze/Cart
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1808,7 +1808,7 @@ BP_ToothV1_C.Actor=True
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1843,6 +1843,7 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
@@ -1862,7 +1863,6 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cy
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
 
 [MessageLog]
 LastLogListing=LightingResults
