--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Maze/Cart
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1843,6 +1843,8 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartBody_Mat.Flat_WoodGrainFloor_CartBody_Mat;
+RecentlyPlaced=/Game/FBX_Models/Maze/CartParts/CartFrontV1.CartFrontV1;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
@@ -1861,11 +1863,9 @@ RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTru
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_Mesh.Axe_Mesh;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
@@ -1890,7 +1890,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/ToothHitGround.wav
+GenericImport=C:/Users/Matt/Desktop/CartFrontV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
