--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 CameraSpeed=2
 RotGridEnabled=False
-CurrentPosGridSize=1
+CurrentPosGridSize=0
 
 [MRU]
 MRUItem0=/Game/_Scenes/Maze
@@ -1843,13 +1843,15 @@ PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartBody_Mat.Flat_WoodGrainFloor_CartBody_Mat;
+RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartSides_Mat1.Flat_WoodGrainFloor_CartSides_Mat1;
+RecentlyPlaced=/Game/FBX_Models/Maze/CartParts/CartBackArchV1.CartBackArchV1;
 RecentlyPlaced=/Game/FBX_Models/Maze/CartParts/CartFrontV1.CartFrontV1;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Mat.Flat_WoodGrainFloor_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V2.COG_V2;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Cogs/COG_V1.COG_V1;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1861,8 +1863,6 @@ RecentlyPlaced=/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Ma
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/Materials/Menu/ClockTrunk/Flat_ClockTrunk_Mat.Flat_ClockTrunk_Mat;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_Mesh.Axe_Mesh;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1890,7 +1890,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/CartFrontV1.fbx
+GenericImport=C:/Users/Matt/Desktop/CartBackArchV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2517,6 +2517,8 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportMaterials=False
+bImportTextures=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
@@ -2695,6 +2697,7 @@ bConvertSceneUnit=False
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.Rain_Inside_House-Mark_DiAngelo-323934112_2.Rain_Inside_House-Mark_DiAngelo-323934112_SoundCue=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.More_Thunder-Mike_Koenig-889679068_5.More_Thunder-Mike_Koenig-889679068_SoundCue=0
 /Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartBody_Mat.Flat_WoodGrainFloor_CartBody_Mat=0
+/Game/Materials/Maze/Cart/Flat_WoodGrainFloor_CartSides_Mat1.Flat_WoodGrainFloor_CartSides_Mat1=0
 
 [MaterialEditor]
 PrimType=1
